<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        tools:ignore="MissingConstraints" >

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:maxHeight="250dp"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/taskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title_hint"
            android:maxLength="64"
            android:gravity="top"
            android:padding="16dp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />
        <EditText
            android:id="@+id/taskText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_text_hint"
            android:minHeight="200dp"
            android:maxHeight="350dp"
            android:gravity="top"
            android:padding="16dp"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/note_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textSize="16dp"
            tools:text="timestamp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/saveNoteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="16dp"
                android:text="@string/save_note"
                tools:ignore="MissingConstraints"
                />
        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>